# tokki

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json  pytest.ini  typecheck
.github/workflows/: publish.yml
src/tokki_sdk/: __init__.py  agent.py  context.py  persona.py  service.py  tokki_pb2.py  tokki_pb2.pyi  tokki_pb2_grpc.py
src/tokki_sdk/agents/: __init__.py  toolcall.py
src/tokki_sdk/tools/: __init__.py  accent_utils.py  agent_hub.py  base.py  bash.py  context.py  database.py  edit.py  executor.py  glob.py  grep.py  helpers.py  integrations.py  mcp.py  memory.py  pdf.py  read.py  write.py
src/tokki_sdk/utils/: backoff.py
tests/: conftest.py  test_accent_utils.py  test_bash_workspace.py  test_edit.py  test_execution_context.py  test_streaming_tool_calls.py  test_to_openai_messages.py  test_toolcall_e2e.py
