[project]
name = "tokki-sdk"
version = "0.1.0"
description = "low level agent sdk"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Gerard Moreno-Torres Bertran" }]
keywords = ["agent", "protocol", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "protobuf>=4.21.0,<7.0.0",
    "grpcio>=1.78.0,<2.0.0",
    "aiohttp>=3.8.0,<4.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "mcp>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "grpcio-tools>=1.50.0,<2.0.0",
    "mypy>=1.0.0",
    "pyright>=1.1.0",
]
langchain = [
    "langchain-core>=0.2.0",
    "langchain-community>=0.2.0",
]
pdf = [
    "markdown>=3.5.0",
    "weasyprint>=60.0",
]

[tool.uv]
package = true

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "pytest-aiohttp>=1.0.0",
    "grpcio-tools>=1.50.0,<2.0.0",
    "mypy>=1.0.0",
    "pyright>=1.1.0",
]
